fix(styles): Top-padding on mobile

--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -15,7 +15,7 @@ body {
   }
 
   @media (max-width: 640px) {
-    padding: .5rem;
+    padding: 1rem .5rem;
   }
 }
 
